# dups_searcher

./: CMakeLists.txt  README.md
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake
include/: file.h  searcher.h
src/: file.cpp  main.cpp  md5.cpp  searcher.cpp
test/: CMakeLists.txt
test/src/: file_test.cpp
